# gpt-from-scratch

./: .gitignore  environment.yml  pyproject.toml
src/gpt_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
